Bug 61529 - Migration to Java 9 : New syntax for GC log
git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1813711 13f79535-47bb-0310-9956-ffa450edef68